<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".user.UserSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/red"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />


    </LinearLayout>
</ScrollView>