<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".admin.AdminSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <!--        <FrameLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            >-->

        <!--            <com.makeramen.roundedimageview.RoundedImageView-->
        <!--                android:layout_width="80dp"-->
        <!--                android:layout_height="80dp"-->
        <!--                android:background="@drawable/background_image"-->
        <!--                android:scaleType="center"-->
        <!--                app:riv_oval="true"-->
        <!--                />-->

        <!--        </FrameLayout>-->



        <EditText
            android:id="@+id/inputTheatreName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/theatre_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputCapacity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/capacity"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputZipcode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/zipcode"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/inputContactMobile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="Mobile Number"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/red"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textSingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />


    </LinearLayout>
</ScrollView>