<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".admin.AddMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputMovieName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/movie_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputGenere"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/genre"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/category"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputStarCast"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/star_cast"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputLanguage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/language"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            >
            <Button
                android:id="@+id/upload_image"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/red"
                android:text="Upload Image"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            >
            <Button
                android:id="@+id/buttonAddMovie"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:backgroundTint="#C62222"
                android:text="Add Movie"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="#C62222"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>